Fixat länkar till alla kanjin
joyo_list_extended.json har blivit... förlängd med information. Ändrat lite front-end också, t.ex grade <h2>:orna

--- a/Server/index.html
+++ b/Server/index.html
@@ -21,14 +21,14 @@
             <!-- <a href="add_item"><img id="peko" src="static/images/ogey_KYM_Flipped.webp" alt="Usada Pekora ogey rrat"></a> -->
         </header>
         <main>
-            <!-- <section class="grade">
-                <h2>Grade X</h2>
+            <section class="grade">
+                <h3>Grade X</h3>
                 <div class="kanji_container">
                     <div class="kanji_item">
-                        余
+                        <a href="//jisho.org/search/%E9%A0%B0%20%23kanji">余</a>
                     </div>
                 </div>
-            </section> -->
+            </section>
         </main>
         <script src="static/javascripts/index.js"></script>
     </body>
