--- a/Server/index.html
+++ b/Server/index.html
@@ -21,14 +21,24 @@
             <!-- <a href="add_item"><img id="peko" src="static/images/ogey_KYM_Flipped.webp" alt="Usada Pekora ogey rrat"></a> -->
         </header>
         <main>
-            <section class="grade">
-                <h3>Grade X</h3>
-                <div class="kanji_container">
-                    <div class="kanji_item">
-                        <a href="//jisho.org/search/%E9%A0%B0%20%23kanji">余</a>
+            <div></div>
+            <div id="grade_list">
+                <section class="grade">
+                    <h3>Grade X</h3>
+                    <div class="kanji_container">
+                        <div class="kanji_item">
+                            <a href="//jisho.org/search/%E9%A0%B0%20%23kanji">余</a>
+                        </div>
                     </div>
-                </div>
-            </section>
+                </section>
+            </div>
+            <aside>
+                <h5>RTK1 quantity:</h5>
+                <form>
+                    <input type="range" name="amountRange" min="0" max="2200" value="0" oninput="badTomfoolery(this)">
+                    <input type="number" name="amountInput" min="0" max="2200" value="0" oninput="badTomfoolery(this)">    
+                </form>
+            </aside>
         </main>
         <script src="static/javascripts/index.js"></script>
     </body>
