Worked on the aside 2: Electric Boogaloo
This is pretty much the final version, but I'll probably do something in the future.

--- a/Server/index.html
+++ b/Server/index.html
@@ -16,8 +16,8 @@
     </head>
     <body>
         <header>
-            <a href="https://toralv.dev"><img src="static/images/toralv.png" alt="Start page"></a>
-            <a href="/"><h1>RTK Joyo comparer</h1></a>
+            <a href="https://toralv.dev"><img src="static/images/toralv.png" alt="Toralv's homepage"></a>
+            <a href="/"><h1>RTK1 Joyo comparer</h1></a>
             <a href="ogey"><img id="peko" src="static/images/ogey_KYM_Flipped.webp" alt="Usada Pekora ogey rrat"></a>
         </header>
         <main>
@@ -44,8 +44,8 @@
                     <input type="number" name="perday" min="1" max="2200" value="0" oninput="this.form.perdayRange.value=this.value">
                     <input type="range" name="perdayRange" min="1" max="50" value="0" oninput="this.form.perday.value=this.value">
                 </form>
-                <p>Days until done:</p>
-                <span id="kanjiperday">2200</span>
+                <h5>Days until done: <span id="kanjiperday">2200</span></h5>
+                
             </aside>
         </main>
         <script src="static/javascripts/index.js"></script>
