--- a/Server/index.html
+++ b/Server/index.html
@@ -17,8 +17,8 @@
     <body>
         <header>
             <a href="https://toralv.dev"><img src="static/images/toralv.png" alt="Toralv's homepage"></a>
-            <a href="/"><h1>RTK1 Joyo comparer</h1></a>
-            <a href="ogey"><img id="peko" src="static/images/ogey_KYM_Flipped.webp" alt="Usada Pekora ogey rrat"></a>
+            <h1>RTK1 Joyo comparer</h1>
+            <a href="https://www.youtube.com/watch?v=JacN1MzyeKo"><img id="peko" src="static/images/ogey_KYM_Flipped.webp" alt="Usada Pekora ogey rrat"></a>
         </header>
         <main>
             <div id="ass"></div>
