--- a/Server/public/html/index.html
+++ b/Server/public/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-		<title>RTK Jōyō comparer</title>
+		<title>RTK1 Jōyō Comparer</title>
 		<link rel="icon" type="image/x-icon" href="static/images/pfp.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<link rel="stylesheet" href="static/stylesheets/index.css">
